[package]
name = "future_rss"
version = "1.0.0"
authors = ["MeteorGX <guixin2010@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "*"
json = "*"
reqwest = "*"
tokio = { version ="*", features = [ "macros","rt-core" ] }
