[package]
name = "future_rss"
version = "1.0.0"
authors = ["MeteorGX <guixin2010@live.cn>"]
edition = "2018"
description = "RSS Parser By Future"
license = "MIT"
readme = "README.md"
keywords = ["xml", "rss"]
documentation = "https://docs.rs/future_rss"
repository = "https://github.com/MeteorGX/future_rss"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.18.1"
json = "0.12.4"
reqwest = "0.10.4"
tokio = { version ="0.2.21", features = [ "macros","rt-core" ] }
